#7 i18n :: Tłumaczenia dla właściwości podstawowych

--- a/src/main/resources/messages_en.properties
+++ b/src/main/resources/messages_en.properties
@@ -1,4 +1,7 @@
 # Registration
-registration.form.subtitle=
-registration.success.title=
-registration.success.subtitle=
+registration.form.title=Register your account
+registration.form.subtitle=Sign up to get full access
+registration.success.title=Your account have been created
+registration.success.subtitle=Please log in and start using Eventuator
+registration.form.page-title=Register your account
+registration.success.page-title=Successful registration
