--- a/src/main/resources/messages_pl.properties
+++ b/src/main/resources/messages_pl.properties
@@ -1,1 +1,7 @@
 # Registration
+registration.form.title=Zarejestruj konto
+registration.form.subtitle=Zarejestruj konto, aby korzystać z aplikacji
+registration.success.title=Twoje konto zostało utworzone
+registration.success.subtitle=Zaloguj się i zacznij używać Eventuatora
+registration.form.page-title=Zarejestruj konto
+registration.success.page-title=Udana rejestracja
