#7 i18n :: Wdrożenie i18n na stronach procesu rejestracji

--- a/src/main/resources/messages_pl.properties
+++ b/src/main/resources/messages_pl.properties
@@ -5,3 +5,7 @@ registration.success.title=Twoje konto zostało utworzone
 registration.success.subtitle=Zaloguj się i zacznij używać Eventuatora
 registration.form.page-title=Zarejestruj konto
 registration.success.page-title=Udana rejestracja
+registration.form.labels.username=Nazwa użytkownika:
+registration.form.labels.nickname=Alias:
+registration.form.labels.password=Hasło:
+registration.form.labels.submit=Zarejestruj
