--- a/src/main/resources/messages.properties
+++ b/src/main/resources/messages.properties
@@ -5,3 +5,7 @@ registration.success.title=Your account have been created
 registration.success.subtitle=Please log in and start using Eventuator
 registration.form.page-title=Register your account
 registration.success.page-title=Successful registration
+registration.form.labels.username=Username:
+registration.form.labels.nickname=Nickname:
+registration.form.labels.password=Password:
+registration.form.labels.submit=Register
