--- a/src/main/resources/messages_pl.properties
+++ b/src/main/resources/messages_pl.properties
@@ -9,3 +9,12 @@ registration.form.labels.username=Nazwa użytkownika:
 registration.form.labels.nickname=Alias:
 registration.form.labels.password=Hasło:
 registration.form.labels.submit=Zarejestruj
+login.form.error=Niepoprawne dane logowania
+login.form.logout=Wylogowano poprawnie
+login.form.page-title=Zaloguj się w Eventuator
+login.form.title=Zaloguj się
+login.form.subtitle.question=Nie masz jeszcze konta?
+login.form.subtitle.register-link=Zarejestruj się
+login.form.username=Nazwa użytkownika
+login.form.password=Hasło
+login.form.login=Zaloguj
