--- a/src/main/resources/messages_en.properties
+++ b/src/main/resources/messages_en.properties
@@ -9,3 +9,12 @@ registration.form.labels.username=Username:
 registration.form.labels.nickname=Nickname:
 registration.form.labels.password=Password:
 registration.form.labels.submit=Register
+login.form.error=Invalid credentials
+login.form.logout=You've been successful logout
+login.form.page-title=Login to Eventuator
+login.form.title=Please login
+login.form.subtitle.question=Don't have an account?
+login.form.subtitle.register-link=Register first
+login.form.username=Username:
+login.form.password=Password:
+login.form.login=Login
