#11 rejestracja-2 :: wykorzystanie szablonu wiadomości
Wprowadzenie wiadomości wykorzystujące szablony html

--- a/src/main/resources/messages.properties
+++ b/src/main/resources/messages.properties
@@ -1,20 +1,26 @@
 # Registration
-registration.form.title=Register your account
-registration.form.subtitle=Sign up to get full access
-registration.success.title=Your account have been created
-registration.success.subtitle=Please log in and start using Eventuator
-registration.form.page-title=Register your account
-registration.success.page-title=Successful registration
-registration.form.labels.username=Username:
+login.form.error=Invalid credentials
+login.form.login=Login
+login.form.logout=You've been successful logout
+login.form.page-title=Login to Eventuator
+login.form.password=Password:
+login.form.subtitle.question=Don't have an account?
+login.form.subtitle.register-link=Register first
+login.form.title=Please login
+login.form.username=Username:
+mail.activation.follow=To continue registration and activate your account please follow this link:
+mail.activation.ignore=If you didn't register your account on {0} please ignore this message
+mail.activation.info=There was a registration request for account <b>{0}</b>
+mail.activation.link=activate
+mail.activation.mail-title=Activate your account
+mail.activation.title=Activate your account
 registration.form.labels.nickname=Nickname:
 registration.form.labels.password=Password:
 registration.form.labels.submit=Register
-login.form.error=Invalid credentials
-login.form.logout=You've been successful logout
-login.form.page-title=Login to Eventuator
-login.form.title=Please login
-login.form.subtitle.question=Don't have an account?
-login.form.subtitle.register-link=Register first
-login.form.username=Username:
-login.form.password=Password:
-login.form.login=Login
+registration.form.labels.username=Username:
+registration.form.page-title=Register your account
+registration.form.subtitle=Sign up to get full access
+registration.form.title=Register your account
+registration.success.page-title=Successful registration
+registration.success.subtitle=Please log in and start using Eventuator
+registration.success.title=Your account have been created
