--- a/src/main/resources/messages_pl.properties
+++ b/src/main/resources/messages_pl.properties
@@ -1,20 +1,26 @@
 # Registration
-registration.form.title=Zarejestruj konto
-registration.form.subtitle=Zarejestruj konto, aby korzystać z aplikacji
-registration.success.title=Twoje konto zostało utworzone
-registration.success.subtitle=Zaloguj się i zacznij używać Eventuatora
-registration.form.page-title=Zarejestruj konto
-registration.success.page-title=Udana rejestracja
-registration.form.labels.username=Nazwa użytkownika:
+login.form.error=Niepoprawne dane logowania
+login.form.login=Zaloguj
+login.form.logout=Wylogowano poprawnie
+login.form.page-title=Zaloguj się w Eventuator
+login.form.password=Hasło
+login.form.subtitle.question=Nie masz jeszcze konta?
+login.form.subtitle.register-link=Zarejestruj się
+login.form.title=Zaloguj się
+login.form.username=Nazwa użytkownika
+mail.activation.follow=To continue registration and activate your account please follow this link: 
+mail.activation.ignore=If you didn't register your account on localhost:8080 please ignore this message
+mail.activation.info=There was a registration request for account <b>{0}</b>
+mail.activation.link=activate
+mail.activation.mail-title=Activate your account
+mail.activation.title=Activate your account
 registration.form.labels.nickname=Alias:
 registration.form.labels.password=Hasło:
 registration.form.labels.submit=Zarejestruj
-login.form.error=Niepoprawne dane logowania
-login.form.logout=Wylogowano poprawnie
-login.form.page-title=Zaloguj się w Eventuator
-login.form.title=Zaloguj się
-login.form.subtitle.question=Nie masz jeszcze konta?
-login.form.subtitle.register-link=Zarejestruj się
-login.form.username=Nazwa użytkownika
-login.form.password=Hasło
-login.form.login=Zaloguj
+registration.form.labels.username=Nazwa użytkownika:
+registration.form.page-title=Zarejestruj konto
+registration.form.subtitle=Zarejestruj konto, aby korzystać z aplikacji
+registration.form.title=Zarejestruj konto
+registration.success.page-title=Udana rejestracja
+registration.success.subtitle=Zaloguj się i zacznij używać Eventuatora
+registration.success.title=Twoje konto zostało utworzone
