#11 rejestracja-2 :: pełna internacjonalizacja wiadomości
W wywołaniu asynchronicznym nie możemy uzyskać informacji o ustawieniach lokalizacyjnych związanych z żądaniem, więc trzeba je otrzymać na wejściu. Stąd rozszerzenie obiektu polecenia rejestracji (InternalRegistrationRequest) o informacje o tych ustawieniach (same ustawienia pozyskiwane są z kontrolera)

--- a/src/main/resources/messages.properties
+++ b/src/main/resources/messages.properties
@@ -9,7 +9,7 @@ login.form.subtitle.register-link=Register first
 login.form.title=Please login
 login.form.username=Username:
 mail.activation.follow=To continue registration and activate your account please follow this link:
-mail.activation.ignore=If you didn't register your account on {0} please ignore this message
+mail.activation.ignore=If you didn't register your account on <a href="http://{0}">{0}</a> please ignore this message
 mail.activation.info=There was a registration request for account <b>{0}</b>
 mail.activation.link=activate
 mail.activation.mail-title=Activate your account
@@ -22,5 +22,5 @@ registration.form.page-title=Register your account
 registration.form.subtitle=Sign up to get full access
 registration.form.title=Register your account
 registration.success.page-title=Successful registration
-registration.success.subtitle=Please log in and start using Eventuator
+registration.success.subtitle=Please check your email and follow activation instructions we've just sent
 registration.success.title=Your account have been created
