--- a/src/main/resources/messages_pl.properties
+++ b/src/main/resources/messages_pl.properties
@@ -8,12 +8,12 @@ login.form.subtitle.question=Nie masz jeszcze konta?
 login.form.subtitle.register-link=Zarejestruj się
 login.form.title=Zaloguj się
 login.form.username=Nazwa użytkownika
-mail.activation.follow=To continue registration and activate your account please follow this link: 
-mail.activation.ignore=If you didn't register your account on localhost:8080 please ignore this message
-mail.activation.info=There was a registration request for account <b>{0}</b>
-mail.activation.link=activate
-mail.activation.mail-title=Activate your account
-mail.activation.title=Activate your account
+mail.activation.follow=W celu dokończenia rejestracji i aktywowania swojego konta przejdź tutaj:
+mail.activation.ignore=Jeżeli nie zarejestrowałeś swojego konta na <a href="http://{0}">{0}</a>, to zignoruj tą wiadomość
+mail.activation.info=Zostało wysłane żądanie rejestracji konta dla <b>{0}</b>
+mail.activation.link=aktywuj
+mail.activation.mail-title=Aktywuj swoje konto
+mail.activation.title=Aktywuj swoje konto
 registration.form.labels.nickname=Alias:
 registration.form.labels.password=Hasło:
 registration.form.labels.submit=Zarejestruj
@@ -22,5 +22,5 @@ registration.form.page-title=Zarejestruj konto
 registration.form.subtitle=Zarejestruj konto, aby korzystać z aplikacji
 registration.form.title=Zarejestruj konto
 registration.success.page-title=Udana rejestracja
-registration.success.subtitle=Zaloguj się i zacznij używać Eventuatora
+registration.success.subtitle=Sprawdź swojego maila i postępuj zgodnie z instrukcjami, które przed chwilą wysłaliśmy
 registration.success.title=Twoje konto zostało utworzone
