--- a/src/main/resources/messages.properties
+++ b/src/main/resources/messages.properties
@@ -9,7 +9,7 @@ login.form.subtitle.register-link=Register first
 login.form.title=Please login
 login.form.username=Username:
 mail.activation.follow=To continue registration and activate your account please follow this link:
-mail.activation.ignore=If you didn't register your account on <a href="http://{0}">{0}</a> please ignore this message
+mail.activation.ignore=If you didn&apos;t register your account on <a href="http://{0}">{0}</a> please ignore this message
 mail.activation.info=There was a registration request for account <b>{0}</b>
 mail.activation.link=activate
 mail.activation.mail-title=Activate your account
