#11 rejestracja-2 :: wyodrębnienie aktywacji do nowej grupy komponentów

--- a/src/main/resources/messages_en.properties
+++ b/src/main/resources/messages_en.properties
@@ -1,4 +1,10 @@
 # Registration
+activation.result.succes.next=Zaloguj się
+activation.result.succes.subtitle=Zaloguj się
+activation.result.success.title=Your account is active now
+activation.result.fail.invalid_token=Invalid activation link
+activation.result.fail.expired_token=The activation link is expired. New link was sent to email account provided during registration
+activation.result.fail.already_active=This account is already active
 login.form.error=Invalid credentials
 login.form.login=Login
 login.form.logout=You've been successful logout
