--- a/src/main/resources/messages_pl.properties
+++ b/src/main/resources/messages_pl.properties
@@ -1,4 +1,10 @@
 # Registration
+activation.result.succes.next=Zaloguj się
+activation.result.succes.subtitle=Zaloguj się
+activation.result.success.title=Twoje konto zostało aktywowane
+activation.result.fail.invalid_token=Nieprawidłowy link aktywacyjny
+activation.result.fail.expired_token=Link wygasł. Wysłano ponownie wiadomość aktywacyjną na konto podane przy rejestracji
+activation.result.fail.already_active=Konto zostało już wcześniej aktywowane
 login.form.error=Niepoprawne dane logowania
 login.form.login=Zaloguj
 login.form.logout=Wylogowano poprawnie
